# DriverStation-Lite

./: CMakeLists.txt  LICENSE.md  README.md  TODO
config/: ds_Config.xml  ds_config.json  ds_config.xml  ds_config.yaml
include/: interface.h  joystick.h  logging.h
lib/: CMakeLists.txt
lib/include/: DS_Array.h  DS_Client.h  DS_Config.h  DS_DefaultProtocols.h  DS_Events.h  DS_Joysticks.h  DS_Protocol.h  DS_Queue.h  DS_Socket.h  DS_String.h  DS_Timer.h  DS_Types.h  DS_Utils.h  LibDS.h  socky.h
lib/src/: array.c  client.c  config.c  events.c  init.c  joysticks.c  protocols.c  queue.c  socket.c  socky.c  string.c  timer.c  utils.c
lib/src/protocols/: frc_2014.c  frc_2015.c  frc_2020.c
src/: file_logger.cpp  interface.c  joystick.c  main.c
tools/joystick_testing/: CMakeLists.txt  main.c
tools/robot_simulation/: client.py  client_with_parsing.py  robot_data.json  server.py
tools/socket_testing/: client_pure_sending.py  server_pure_receiving.py
